--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^6.1.0",
+    "js-yaml": "^4.1.0",
     "strip-ansi": "^6.0.0"
   },
   "devDependencies": {
